# dogbox

./: .travis.yml  CMakeLists.txt  LICENSE  benchmarks.cpp  format.sh  install_dependencies.sh  system_tests.sh
benchmarks/: CMakeLists.txt  benchmarks.cpp
blob_layer/: CMakeLists.txt  blob_storage.cpp  blob_storage.h  hash_code.cpp  hash_code.h
common/: byte_literal.h  create_random_file.h  directory_auto_deleter.h  file_descriptor.h
fuse_adaptor/: CMakeLists.txt  fuse_adaptor.cpp  fuse_adaptor.h
fuse_frontend/: CMakeLists.txt  main.cpp
in_memory_fuse_frontend/: CMakeLists.txt  main.cpp
in_memory_fuse_frontend_shared/: CMakeLists.txt  directory.cpp  directory.h
shared/: CMakeLists.txt  directory.cpp  directory.h  overloaded.h  to_do.h
tests/: CMakeLists.txt  blob_storage_test.cpp  create_random_file_test.cpp  fuse_adaptor_test.cpp  import_test.cpp  scan_directory_test.cpp  tests.cpp  trees_directory_test.cpp  trees_regular_file_test.cpp  trees_test.cpp
trees/: CMakeLists.txt  directory.cpp  import.cpp  import.h  regular_file.cpp  regular_file.h  trees.cpp  trees.h
